fixed footer link and fixed services contact section text alignment

--- a/frontend/src/pages/PageServices/PageServices.module.css
+++ b/frontend/src/pages/PageServices/PageServices.module.css
@@ -80,9 +80,11 @@
   background-color: #f5f5f5;
 }
 
-h1{
+
+.contactSection h1{
     font-size: 3rem;
     margin: 0;
+    text-align: center;
 }
 h2{
     margin: 0;
